--- a/packages/autofmt/Cargo.toml
+++ b/packages/autofmt/Cargo.toml
@@ -14,7 +14,12 @@ keywords = ["dom", "ui", "gui", "react"]
 dioxus-rsx = { workspace = true }
 proc-macro2 = { version = "1.0.6", features = ["span-locations"] }
 quote = { workspace = true }
-syn = { workspace = true, features = ["full", "extra-traits", "visit"] }
+syn = { workspace = true, features = [
+    "full",
+    "extra-traits",
+    "visit",
+    "visit-mut",
+] }
 serde = { version = "1.0.136", features = ["derive"] }
 prettyplease = { workspace = true }
 
