--- a/Makefile.toml
+++ b/Makefile.toml
@@ -88,7 +88,7 @@ command = "cargo"
 args = ["build"]
 
 [tasks.test-flow]
-dependencies = ["test"]
+dependencies = ["test", "docs"]
 private = true
 
 [tasks.test]
@@ -100,6 +100,16 @@ args = [
   "--bins",
   "--tests",
   "--examples",
+  "--workspace",
+]
+private = true
+
+[tasks.docs]
+dependencies = ["build"]
+command = "cargo"
+args = [
+  "test",
+  "--doc",
   "--workspace",
 ]
 private = true
