--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -73,7 +73,7 @@ dioxus = { workspace = true, features = ["fullstack"] }
 default = ["hot-reload"]
 hot-reload = ["serde_json"]
 web = ["dioxus-web", "web-sys"]
-desktop = ["dioxus-desktop"]
+desktop = ["dioxus-desktop", "server_fn/reqwest", "dioxus_server_macro/reqwest"] 
 mobile = ["dioxus-mobile"]
 default-tls = ["server_fn/default-tls"]
 rustls = ["server_fn/rustls"]
