--- a/packages/server-macro/Cargo.toml
+++ b/packages/server-macro/Cargo.toml
@@ -17,7 +17,7 @@ proc-macro2 = "^1.0.63"
 quote = "^1.0.26"
 syn = { workspace = true, features = ["full"] }
 convert_case = "^0.6.0"
-server_fn_macro = "^0.6.5"
+server_fn_macro = "0.6.11"
 
 [lib]
 proc-macro = true
@@ -25,3 +25,4 @@ proc-macro = true
 [features]
 axum = ["server_fn_macro/axum"]
 server = ["server_fn_macro/ssr"]
+reqwest = ["server_fn_macro/reqwest"]
