--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -17,7 +17,7 @@ dioxus-html = { workspace = true, features = [
     "mounted",
     "eval",
 ] }
-dioxus-interpreter-js = { workspace = true, features = ["binary-protocol"] }
+dioxus-interpreter-js = { workspace = true, features = ["binary-protocol", "eval"] }
 dioxus-cli-config = { workspace = true, features = ["read-config"] }
 generational-box = { workspace = true }
 
@@ -95,4 +95,9 @@ harness = false
 [[test]]
 name = "check_rendering"
 path = "headless_tests/rendering.rs"
+harness = false
+
+[[test]]
+name = "check_eval"
+path = "headless_tests/eval.rs"
 harness = false
