--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,6 +115,9 @@ axum-extra = "0.9.2"
 reqwest = "0.11.24"
 owo-colors = "4.0.0"
 
+# cli, cli-config
+dirs = "5.0.1"
+
 [workspace.dev-dependencies]
 isnta = "1.36.1"
 
