--- a/packages/ssr/Cargo.toml
+++ b/packages/ssr/Cargo.toml
@@ -21,6 +21,11 @@ http = { workspace = true }
 async-trait = { workspace = true }
 serde_json = { workspace = true }
 chrono = { version = "0.4.34", optional = true }
+futures-util = { workspace = true, default-features = false, features = [
+    "alloc",
+    "std",
+] }
+futures-channel = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tokio = { version = "1.28", features = ["io-util"], optional = true }
