--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -46,6 +46,7 @@ serde = "1.0.159"
 serde_json = { version = "1.0.95", optional = true }
 tokio-stream = { version = "0.1.12", features = ["sync"], optional = true }
 futures-util = { workspace = true }
+futures-channel = { workspace = true }
 ciborium = "0.2.1"
 base64 = "0.21.0"
 
