--- a/packages/rsx/Cargo.toml
+++ b/packages/rsx/Cargo.toml
@@ -23,6 +23,7 @@ krates = { version = "0.16.6", optional = true }
 tracing = { workspace = true }
 proc-macro2-diagnostics = { version = "0.10", default-features = false }
 rstml = { path = "../../../Tinkering/rstml" }
+prettier-please = { version = "*" }
 
 [features]
 default = ["html", "hot_reload"]
