--- a/packages/autofmt/Cargo.toml
+++ b/packages/autofmt/Cargo.toml
@@ -25,3 +25,6 @@ prettyplease = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = "1.2.1"
+
+[package.metadata.docs.rs]
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
