--- a/packages/server-macro/Cargo.toml
+++ b/packages/server-macro/Cargo.toml
@@ -26,3 +26,6 @@ proc-macro = true
 axum = ["server_fn_macro/axum"]
 server = ["server_fn_macro/ssr"]
 reqwest = ["server_fn_macro/reqwest"]
+
+[package.metadata.docs.rs]
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
