--- a/packages/ssr/Cargo.toml
+++ b/packages/ssr/Cargo.toml
@@ -44,3 +44,6 @@ fs_extra = "1.2.0"
 [features]
 default = []
 incremental = ["dep:tokio", "chrono", "dioxus-cli-config"]
+
+[package.metadata.docs.rs]
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
