--- a/packages/config-macro/Cargo.toml
+++ b/packages/config-macro/Cargo.toml
@@ -25,3 +25,6 @@ mobile = []
 web = []
 ssr = []
 liveview = []
+
+[package.metadata.docs.rs]
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
