--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -35,3 +35,6 @@ reqwest = { workspace = true}
 [features]
 default = []
 serialize = ["serde"]
+
+[package.metadata.docs.rs]
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
