--- a/packages/dioxus-lib/Cargo.toml
+++ b/packages/dioxus-lib/Cargo.toml
@@ -25,6 +25,9 @@ dioxus = { workspace = true }
 [features]
 default = ["macro", "html", "signals", "hooks"]
 signals = ["dioxus-signals"]
-macro = ["dioxus-core-macro", "dioxus-rsx"]
+macro = ["dioxus-core-macro", "dioxus-rsx", "dioxus-config-macro"]
 html = ["dioxus-html"]
 hooks = ["dioxus-hooks"]
+
+[package.metadata.docs.rs]
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
