--- a/packages/mobile/Cargo.toml
+++ b/packages/mobile/Cargo.toml
@@ -16,3 +16,6 @@ dioxus-desktop = { workspace = true, features = ["tokio_runtime"] }
 doctest = false
 # tests suspended until package ready
 test = false
+
+[package.metadata.docs.rs]
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
