--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,10 +61,10 @@ dioxus-core-macro = { path = "packages/core-macro", version = "0.5.0" }
 dioxus-config-macro = { path = "packages/config-macro", version = "0.5.0" }
 dioxus-router = { path = "packages/router", version = "0.5.0" }
 dioxus-router-macro = { path = "packages/router-macro", version = "0.5.0" }
-dioxus-html = { path = "packages/html", version = "0.5.0" }
+dioxus-html = { path = "packages/html", default-features = false, version = "0.5.0" }
 dioxus-html-internal-macro = { path = "packages/html-internal-macro", version = "0.5.0" }
 dioxus-hooks = { path = "packages/hooks", version = "0.5.0" }
-dioxus-web = { path = "packages/web", version = "0.5.0" }
+dioxus-web = { path = "packages/web", default-features = false, version = "0.5.0" }
 dioxus-ssr = { path = "packages/ssr", version = "0.5.0", default-features = false }
 dioxus-desktop = { path = "packages/desktop", version = "0.5.0", default-features = false }
 dioxus-mobile = { path = "packages/mobile", version = "0.5.0" }
