--- a/packages/dioxus/Cargo.toml
+++ b/packages/dioxus/Cargo.toml
@@ -12,13 +12,13 @@ rust-version = "1.65.0"
 
 [dependencies]
 dioxus-core = { workspace = true }
-dioxus-html = { workspace = true, optional = true }
+dioxus-html = { workspace = true, default-features = false, optional = true }
 dioxus-core-macro = { workspace = true, optional = true }
 dioxus-config-macro = { workspace = true, optional = true }
 dioxus-hooks = { workspace = true, optional = true }
 dioxus-signals = { workspace = true, optional = true }
 dioxus-router = { workspace = true, optional = true }
-dioxus-web = { workspace = true, optional = true }
+dioxus-web = { workspace = true, default-features = false, optional = true }
 dioxus-mobile = { workspace = true, optional = true }
 dioxus-desktop = { workspace = true, default-features = true, optional = true }
 dioxus-fullstack = { workspace = true, optional = true }
@@ -33,14 +33,15 @@ dioxus-hot-reload = { workspace = true, optional = true }
 
 [features]
 default = ["macro", "html", "hot-reload", "signals", "hooks", "launch", "mounted", "file_engine", "eval"]
+minimal = ["macro", "html", "hot-reload", "signals", "hooks", "launch"]
 signals = ["dioxus-signals"]
 macro = ["dioxus-core-macro"]
 html = ["dioxus-html"]
 hooks = ["dioxus-hooks"]
 hot-reload = ["dioxus-hot-reload", "dioxus-web?/hot_reload"]
-mounted = ["dioxus-web?/mounted"]
+mounted = ["dioxus-web?/mounted", "dioxus-html?/mounted"]
 file_engine = ["dioxus-web?/file_engine"]
-eval = ["dioxus-web?/eval"]
+eval = ["dioxus-web?/eval", "dioxus-html?/eval"]
 
 launch = ["dioxus-config-macro"]
 router = ["dioxus-router"]
