--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -17,10 +17,11 @@ generational-box = { workspace = true }
 serde = { version = "1", features = ["derive"], optional = true }
 serde_repr = { version = "0.1", optional = true }
 wasm-bindgen = { workspace = true, optional = true }
+js-sys = { version = "0.3.56", optional = true }
 euclid = "0.22.7"
 enumset = "1.1.2"
-keyboard-types = "0.7"
-async-trait = "0.1.58"
+keyboard-types = { version = "0.7", default-features = false }
+async-trait = { version = "0.1.58", optional = true }
 serde-value = { version = "0.7.0", optional = true }
 tokio = { workspace = true, features = ["fs", "io-util"], optional = true }
 rfd = { version = "0.14", optional = true }
@@ -38,6 +39,7 @@ features = [
     "MouseEvent",
     "DragEvent",
     "InputEvent",
+    "HtmlInputElement",
     "ClipboardEvent",
     "KeyboardEvent",
     "WheelEvent",
@@ -52,7 +54,7 @@ features = [
 serde_json = "1"
 
 [features]
-default = ["serialize", "mounted", "eval"]
+default = ["serialize", "mounted", "eval", "file-engine"]
 serialize = [
     "serde",
     "serde_json",
@@ -74,7 +76,14 @@ eval = [
     "serde",
     "serde_json"
 ]
+file-engine = [
+    "async-trait",
+    "js-sys",
+    "web-sys?/File",
+    "web-sys?/FileList",
+    "web-sys?/FileReader"
+]
 wasm-bind = ["web-sys", "wasm-bindgen"]
-native-bind = ["tokio"]
+native-bind = ["tokio", "file-engine"]
 hot-reload-context = ["dioxus-rsx"]
 html-to-rsx = []
