--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -10,7 +10,7 @@ homepage = "https://dioxuslabs.com/learn/0.5/getting_started"
 keywords = ["dom", "ui", "gui", "react", "wasm"]
 
 [dependencies]
-dioxus-core = { workspace = true, features = ["serialize"] }
+dioxus-core = { workspace = true }
 dioxus-html = { workspace = true, features = ["wasm-bind"] }
 dioxus-interpreter-js = { workspace = true, features = [
     "minimal_bindings",
@@ -30,8 +30,8 @@ futures-util = { workspace = true, features = [
     "async-await-macro",
 ] }
 futures-channel = { workspace = true }
-serde_json = { version = "1.0" }
-serde = { version = "1.0" }
+serde_json = { version = "1.0", optional = true }
+serde = { version = "1.0", optional = true }
 serde-wasm-bindgen = { version = "0.5.0", optional = true }
 async-trait = { version = "0.1.58", optional = true }
 
@@ -57,13 +57,11 @@ panic_hook = ["console_error_panic_hook"]
 hydrate = ["web-sys/Comment"]
 mounted = ["web-sys/Element", "dioxus-html/mounted"]
 file_engine = [
-    "web-sys/File",
-    "web-sys/FileList",
-    "web-sys/FileReader",
+    "dioxus-html/file-engine",
     "async-trait",
 ]
-hot_reload = ["web-sys/MessageEvent", "web-sys/WebSocket", "web-sys/Location"]
-eval = ["dioxus-html/eval", "dioxus-interpreter-js/eval", "serde-wasm-bindgen", "async-trait"]
+hot_reload = ["web-sys/MessageEvent", "web-sys/WebSocket", "web-sys/Location", "serde_json", "serde", "dioxus-core/serialize"]
+eval = ["dioxus-html/eval", "dioxus-interpreter-js/eval", "serde-wasm-bindgen", "async-trait", "serde_json"]
 
 [dev-dependencies]
 dioxus = { workspace = true }
