--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -26,6 +26,7 @@ generational-box = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tracing-fluent-assertions = "0.3.0"
 dioxus = { workspace = true }
+dioxus-html = { workspace = true, features = ["serialize"] }
 pretty_assertions = "1.3.0"
 rand = "0.8.5"
 dioxus-ssr = { workspace = true }
