--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -27,7 +27,7 @@ hyper = { workspace = true, optional = true }
 http = { workspace = true, optional = true }
 
 # Web Integration
-dioxus-web = { workspace = true, features = ["hydrate"], optional = true }
+dioxus-web = { workspace = true, features = ["hydrate"], default-features = false, optional = true }
 
 # Desktop Integration
 dioxus-desktop = { workspace = true, optional = true }
@@ -51,7 +51,6 @@ base64 = "0.21.0"
 
 pin-project = { version = "1.1.2", optional = true }
 thiserror = { workspace = true, optional = true }
-async-trait = "0.1.71"
 bytes = "1.4.0"
 tower = { workspace = true, features = ["util"], optional = true }
 tower-layer = { version = "0.3.2", optional = true }
@@ -71,7 +70,10 @@ dioxus = { workspace = true, features = ["fullstack"] }
 
 [features]
 default = ["hot-reload"]
-hot-reload = ["serde_json", "dioxus-hot-reload/serve"]
+hot-reload = ["serde_json", "dioxus-web?/hot_reload", "dioxus-hot-reload/serve"]
+mounted = ["dioxus-web?/mounted"]
+file_engine = ["dioxus-web?/file_engine"]
+eval = ["dioxus-web?/eval"]
 web = ["dioxus-web", "web-sys"]
 desktop = ["dioxus-desktop", "server_fn/reqwest", "dioxus_server_macro/reqwest"] 
 mobile = ["dioxus-mobile"]
