--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -40,6 +40,7 @@ tracing-futures = { workspace = true, optional = true }
 once_cell = "1.17.1"
 tokio-util = { version = "0.7.8", features = ["rt"], optional = true }
 anymap = { version = "0.12.1", optional = true }
+async-trait = { version = "0.1.58", optional = true }
 
 serde = "1.0.159"
 serde_json = { version = "1.0.95", optional = true }
@@ -97,5 +98,6 @@ server = [
     "tracing-futures",
     "pin-project",
     "thiserror",
-    "dioxus-cli-config"
+    "dioxus-cli-config",
+    "async-trait"
 ]
