enable the web renderer in the PWA example

--- a/examples/PWA-example/Cargo.toml
+++ b/examples/PWA-example/Cargo.toml
@@ -8,8 +8,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { workspace = true }
-dioxus-web = { workspace = true }
+dioxus = { workspace = true, features = ["web"] }
 
 log = "0.4.6"
 
