improve inline docs

--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -22,6 +22,7 @@ tracing = { workspace = true }
 serde = { version = "1", features = ["derive"], optional = true }
 tracing-subscriber = "0.3.18"
 generational-box = { workspace = true }
+rustversion = "1.0.17"
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
