--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -27,6 +27,7 @@ rfd = { version = "0.14", optional = true }
 futures-channel = { workspace = true }
 serde_json = { version = "1", optional = true }
 tracing.workspace = true
+rustversion = "1.0.17"
 
 [dependencies.web-sys]
 optional = true
