--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -54,6 +54,7 @@ thiserror = { workspace = true, optional = true }
 bytes = "1.4.0"
 tower = { workspace = true, features = ["util"], optional = true }
 tower-layer = { version = "0.3.2", optional = true }
+parking_lot = { version = "0.12.1", features = ["send_guard"], optional = true }
 web-sys = { version = "0.3.61", optional = true, features = ["Window", "Document", "Element", "HtmlDocument", "Storage", "console"] }
 
 dioxus-cli-config = { workspace = true, features = ["read-config"], optional = true }
@@ -79,7 +80,7 @@ desktop = ["dioxus-desktop", "server_fn/reqwest", "dioxus_server_macro/reqwest"]
 mobile = ["dioxus-mobile"]
 default-tls = ["server_fn/default-tls"]
 rustls = ["server_fn/rustls"]
-axum = ["dep:axum", "tower-http", "server", "server_fn/axum", "dioxus_server_macro/axum"]
+axum = ["dep:axum", "tower-http", "server", "server_fn/axum", "dioxus_server_macro/axum", "default-tls"]
 static-site-generation = []
 server = [
     "server_fn/ssr",
@@ -98,5 +99,6 @@ server = [
     "pin-project",
     "thiserror",
     "dioxus-cli-config",
-    "async-trait"
+    "async-trait",
+    "parking_lot"
 ]
