Add the capability to handle resize event for web target

--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -49,6 +49,9 @@ features = [
     "DataTransfer",
     "console",
     "NodeList",
+    "ResizeObserver",
+    "ResizeObserverEntry",
+    "ResizeObserverSize",
 ]
 
 [features]
