add on_unimplemented hint to Dependency

--- a/packages/hooks/Cargo.toml
+++ b/packages/hooks/Cargo.toml
@@ -23,6 +23,7 @@ slab = { workspace = true }
 dioxus-debug-cell = "0.1.1"
 futures-util = { workspace = true}
 generational-box.workspace = true
+rustversion = "1.0.17"
 
 [dev-dependencies]
 futures-util = { workspace = true, default-features = false }
