--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -33,6 +33,13 @@ rand = "0.8.5"
 dioxus-ssr = { workspace = true }
 reqwest = { workspace = true}
 
+[dev-dependencies.web-sys]
+version = "0.3.56"
+features = [
+    "Document",
+    "HtmlElement",
+]
+
 [features]
 default = []
 serialize = ["serde"]
