--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -51,6 +51,9 @@ features = [
 
 [dev-dependencies]
 serde_json = "1"
+dioxus = { workspace = true }
+dioxus-web = { workspace = true }
+tokio = { workspace = true, features = ["time"] }
 
 [features]
 default = ["serialize", "mounted", "eval"]
