--- a/Cargo.toml
+++ b/Cargo.toml
@@ -157,6 +157,8 @@ reqwest = { version = "0.11.9", features = ["json"], optional = true }
 http-range = { version = "0.1.5", optional = true }
 ciborium = { version = "0.2.1", optional = true }
 base64 = { version = "0.21.0", optional = true }
+tracing-subscriber = "0.3.18"
+tracing.workspace = true
 
 [dev-dependencies]
 dioxus = { workspace = true, features = ["router"] }
