--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ members = [
     "packages/fullstack/examples/axum-streaming",
     "packages/fullstack/examples/axum-desktop",
     "packages/fullstack/examples/axum-auth",
+    "packages/fullstack/examples/hackernews",
     "packages/static-generation/examples/simple",
     "packages/static-generation/examples/router",
     "packages/static-generation/examples/github-pages",
