--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,7 @@ version = "0.5.2"
 [workspace.dependencies]
 dioxus = { path = "packages/dioxus", version = "0.5.0" }
 dioxus-lib = { path = "packages/dioxus-lib", version = "0.5.0" }
-dioxus-core = { path = "packages/core", version = "0.5.0" }
+dioxus-core = { path = "packages/core", default-features = false, version = "0.5.0" }
 dioxus-core-macro = { path = "packages/core-macro", version = "0.5.0" }
 dioxus-config-macro = { path = "packages/config-macro", version = "0.5.0" }
 dioxus-router = { path = "packages/router", version = "0.5.0" }
