--- a/packages/static-generation/Cargo.toml
+++ b/packages/static-generation/Cargo.toml
@@ -33,5 +33,10 @@ default = []
 server = ["dioxus-fullstack/server", "dioxus-router/ssr", "dioxus-ssr", "tokio", "http", "dep:axum", "tower-http", "dioxus-hot-reload", "dioxus-cli-config", "tower"]
 web = ["dioxus-fullstack/web", "dioxus-router/web", "dioxus-web"]
 
+[[bench]]
+name = "incremental"
+required-features = ["ssr"]
+harness = false
+
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
