--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,7 @@ version = "0.5.2"
 
 # dependencies that are shared across packages
 [workspace.dependencies]
-dioxus = { path = "packages/dioxus", version = "0.5.0" }
+dioxus = { path = "packages/dioxus", version = "0.5.0", features = ["minimal"], default-features = false }
 dioxus-lib = { path = "packages/dioxus-lib", version = "0.5.0" }
 dioxus-core = { path = "packages/core", default-features = false, version = "0.5.0" }
 dioxus-core-macro = { path = "packages/core-macro", version = "0.5.0" }
@@ -161,7 +161,7 @@ base64 = { version = "0.21.0", optional = true }
 tracing.workspace = true
 
 [dev-dependencies]
-dioxus = { workspace = true, features = ["router"] }
+dioxus = { workspace = true, features = ["router"], default-features = true }
 dioxus-ssr = { workspace = true }
 futures-util = "0.3.21"
 separator = "0.4.1"
