--- a/packages/playwright-tests/fullstack/Cargo.toml
+++ b/packages/playwright-tests/fullstack/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { workspace = true, features = ["fullstack"] }
+dioxus = { workspace = true, features = ["fullstack"], default-features = true }
 serde = "1.0.159"
 
 [features]
