--- a/packages/signals/Cargo.toml
+++ b/packages/signals/Cargo.toml
@@ -28,6 +28,8 @@ dioxus = { workspace = true }
 tokio = { version = "1", features = ["full"] }
 tracing-subscriber = "0.3.17"
 simple_logger = "4.2.0"
+reqwest = { workspace = true }
+rand = "0.8"
 
 [features]
 default = []
