--- a/Cargo.toml
+++ b/Cargo.toml
@@ -135,6 +135,10 @@ opt-level = 1
 [profile.cli-dev.package."*"]
 opt-level = 3
 
+# Disable debug assertions to check the released path of core and other packages, but build without optimizations to keep build times quick
+[profile.release-unoptimized]
+inherits = "dev"
+debug-assertions = false
 
 # This is a "virtual package"
 # It is not meant to be published, but is used so "cargo run --example XYZ" works properly
