--- a/packages/static-generation/examples/simple/Cargo.toml
+++ b/packages/static-generation/examples/simple/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { workspace = true, features = ["static-generation", "router"] }
+dioxus = { workspace = true, features = ["static-generation"] }
 tracing-subscriber = "0.3.18"
 
 [features]
