--- a/packages/cli-config/Cargo.toml
+++ b/packages/cli-config/Cargo.toml
@@ -23,7 +23,7 @@ tauri-utils = { version = "=1.5.*", optional = true }
 
 [features]
 default = ["read-config"]
-cli = ["tauri-bundler", "tauri-utils", "clap", "toml", "cargo_toml"]
+cli = ["dep:tauri-bundler", "dep:tauri-utils", "dep:clap", "dep:toml", "dep:cargo_toml"]
 read-config = []
 
 [package.metadata.docs.rs]
