--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -43,7 +43,7 @@ features = [
 
 [features]
 default = []
-serialize = ["serde"]
+serialize = ["dep:serde"]
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
