--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -53,17 +53,17 @@ features = [
 
 [features]
 default = ["panic_hook", "mounted", "file_engine", "hot_reload", "eval"]
-panic_hook = ["console_error_panic_hook"]
+panic_hook = ["dep:console_error_panic_hook"]
 hydrate = ["web-sys/Comment"]
 mounted = ["web-sys/Element", "dioxus-html/mounted"]
 file_engine = [
     "web-sys/File",
     "web-sys/FileList",
     "web-sys/FileReader",
-    "async-trait",
+    "dep:async-trait",
 ]
 hot_reload = ["web-sys/MessageEvent", "web-sys/WebSocket", "web-sys/Location"]
-eval = ["dioxus-html/eval", "dioxus-interpreter-js/eval", "serde-wasm-bindgen", "async-trait"]
+eval = ["dioxus-html/eval", "dioxus-interpreter-js/eval", "dep:serde-wasm-bindgen", "dep:async-trait"]
 
 [dev-dependencies]
 dioxus = { workspace = true }
