--- a/packages/rsx/Cargo.toml
+++ b/packages/rsx/Cargo.toml
@@ -24,7 +24,7 @@ tracing = { workspace = true }
 
 [features]
 default = ["html", "hot_reload"]
-hot_reload = ["krates", "internment", "dioxus-core"]
+hot_reload = ["dep:krates", "dep:internment", "dep:dioxus-core"]
 serde = ["dep:serde"]
 html = []
 
