fix required-features fields to use the correct feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -235,105 +235,105 @@ doc-scrape-examples = true
 
 [[example]]
 name = "backgrounded_futures"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "calculator_mutable"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "calculator"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "clock"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "crm"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "custom_html"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "custom_menu"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "dynamic_asset"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "error_handle"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "file_explorer"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "future"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "hydration"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "multiwindow"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "overlay"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "popup"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "read_size"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "shortcut"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "streams"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "window_event"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "window_focus"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
 
 [[example]]
 name = "window_zoom"
-required-features = ["desktop"]
+required-features = ["default"]
 doc-scrape-examples = true
