--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -94,7 +94,7 @@ server = [
     "dep:pin-project",
     "dep:thiserror",
     "dep:dioxus-cli-config",
-    "dep:dioxus-cli-config/cli"
+    "dioxus-cli-config/cli"
 ]
 
 [package.metadata.docs.rs]
