--- a/Cargo.toml
+++ b/Cargo.toml
@@ -163,10 +163,10 @@ reqwest = { version = "0.11.9", features = ["json"], optional = true }
 http-range = { version = "0.1.5", optional = true }
 ciborium = { version = "0.2.1", optional = true }
 base64 = { version = "0.21.0", optional = true }
-tracing.workspace = true
+tracing = { workspace = true }
 
 [dev-dependencies]
-dioxus = { workspace = true, features = ["router"], default-features = true }
+dioxus = { workspace = true, features = ["router"] }
 dioxus-ssr = { workspace = true }
 futures-util = "0.3.21"
 separator = "0.4.1"
