--- a/packages/playwright-tests/liveview/Cargo.toml
+++ b/packages/playwright-tests/liveview/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [dependencies]
-dioxus = { workspace = true, default-features = true }
+dioxus = { workspace = true }
 dioxus-liveview = { workspace = true, features = ["axum"] }
 tokio = { version = "1.19.2", features = ["full"] }
 axum = { workspace = true, features = ["ws"] }
